Fix navbar dropdown hidden behind header

--- a/app/static/scss/layouts/_dashboard.scss
+++ b/app/static/scss/layouts/_dashboard.scss
@@ -37,6 +37,7 @@
 
   &.sticky-top {
     top: 3.5rem;
+    z-index: $z-index-nav - 1;
   }
 }
 
